--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Starter pack",
-  "name": "Dapp Starter pack",
+  "short_name": "verifiable credits",
+  "name": "verifiable credits",
   "icons": [{
     "src": "favicon.ico",
     "sizes": "64x64 32x32 24x24 16x16",
